--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -45,7 +45,7 @@
         android:background="@drawable/btnlogin"
         android:elevation="20dp"
         android:text="@string/login"
-        android:textSize="30dp"
+        android:textSize="30sp"
         />
 
 </RelativeLayout>
