--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +9,7 @@
     <EditText
         android:textSize="30dp"
         android:inputType="textEmailAddress"
-        android:hint="email address"
+        android:hint="@string/email_address"
         android:textAlignment="center"
         android:id="@+id/emaillogin"
         android:layout_width="300dp"
@@ -18,12 +17,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="200dp"
         android:background="@drawable/edtlogin"
-        android:elevation="20dp" />
+        android:elevation="20dp"
+        android:autofillHints="" />
 
     <EditText
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:inputType="textPassword"
-        android:hint="password"
+        android:hint="@string/password"
         android:textAlignment="center"
         android:id="@+id/passlogin"
         android:layout_width="300dp"
@@ -32,7 +32,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:background="@drawable/edtlogin"
-        android:elevation="20dp" />
+        android:elevation="20dp"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/btnlogin"
@@ -44,7 +45,7 @@
         android:background="@drawable/btnlogin"
         android:elevation="20dp"
         android:text="@string/login"
-        android:textSize="30dp"
+        android:textSize="30sp"
         />
 
 </RelativeLayout>
