--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -6,6 +6,10 @@
     android:background="@drawable/logbg"
     tools:context=".MainActivity">
 
-
+<include
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    layout="@layout/activity_main"
+    tools:ignore="ResourceCycle" />
 
 </RelativeLayout>
