--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/logbg"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/loginlayout">
 
     <EditText
         android:textSize="30dp"
