refactored the editexts

--- a/app/src/main/res/layout-v21/activity_signup.xml
+++ b/app/src/main/res/layout-v21/activity_signup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/logbg"
-    tools:context=".LoginActivity"
+    tools:context=".SignUpActivity"
     android:id="@+id/loginlayout">
 
     <EditText
@@ -12,7 +12,7 @@
         android:inputType="textEmailAddress"
         android:hint="@string/email_address"
         android:textAlignment="center"
-        android:id="@+id/emaillogin"
+        android:id="@+id/emailsignup"
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_centerHorizontal="true"
@@ -26,10 +26,10 @@
         android:inputType="textPassword"
         android:hint="@string/password"
         android:textAlignment="center"
-        android:id="@+id/passlogin"
+        android:id="@+id/passsignup"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:layout_below="@id/emaillogin"
+        android:layout_below="@id/emailsignup"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:background="@drawable/edtlogin"
@@ -46,7 +46,7 @@
         android:id="@+id/passlogin2"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:layout_below="@id/passlogin"
+        android:layout_below="@id/passsignup"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:background="@drawable/edtlogin"
