rectified the similarities in ids with signup

--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -12,7 +12,7 @@
         android:inputType="textEmailAddress"
         android:hint="@string/email_address"
         android:textAlignment="center"
-        android:id="@+id/emaillogin"
+        android:id="@+id/emailsignup"
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_centerHorizontal="true"
@@ -29,7 +29,7 @@
         android:id="@+id/passlogin"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:layout_below="@id/emaillogin"
+        android:layout_below="@id/emailsignup"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:background="@drawable/edtlogin"
