--- a/app/src/main/res/layout-v21/activity_signup.xml
+++ b/app/src/main/res/layout-v21/activity_signup.xml
@@ -43,7 +43,7 @@
         android:inputType="textPassword"
         android:hint="@string/password"
         android:textAlignment="center"
-        android:id="@+id/passlogin2"
+        android:id="@+id/passsignup2"
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_below="@id/passsignup"
@@ -57,7 +57,7 @@
         android:id="@+id/btnlogin"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:layout_below="@id/passlogin2"
+        android:layout_below="@id/passsignup2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:background="@drawable/btnlogin"
